Added quiz for CO7217

--- a/partI/.mu3.md.html
+++ b/partI/.mu3.md.html
@@ -694,8 +694,10 @@ function setDocumentScrollTop(ypos)
  <li> 
   <g-emoji alias="black_nib" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2712.png" ios-version="6.0">
    ✒️
-  </g-emoji> <a href="https://blackboard.le.ac.uk/webapps/assessment/take/launchAssessment.jsp?course_id=_7623_1&amp;content_id=_1291252_1&amp;mode=cpview">Quiz on NoSQL</a> 
+  </g-emoji> Quiz on NoSQL 
   <ul> 
+   <li><a href="https://blackboard.le.ac.uk/webapps/assessment/take/launchAssessment.jsp?course_id=_5572_1&amp;content_id=_1291085_1&amp;mode=view">CO4217/CO7217 (campus students)</a></li> 
+   <li><a href="https://blackboard.le.ac.uk/webapps/assessment/take/launchAssessment.jsp?course_id=_7623_1&amp;content_id=_1291252_1&amp;mode=cpview">CO7517 (DL students)</a></li> 
    <li>you may need to be logged in Blackboard in your browser for the redirection to work correctly;</li> 
    <li>feedback is provided as soon as you submit your answers.</li> 
   </ul> </li> 
