Make question A of essay more specific

--- a/partI/.miniproject1.md.html
+++ b/partI/.miniproject1.md.html
@@ -755,11 +755,11 @@ function setDocumentScrollTop(ypos)
 <h2> <a id="nosql-essay-40-marks" class="anchor" href="#nosql-essay-40-marks" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>NoSQL (essay) [40 marks]</h2> 
 <p>Discuss the architecture of Twitter from an scalability point of view, after watching this presentation on <a href="https://www.infoq.com/presentations/Real-Time-Delivery-Twitter">Real-Time Delivery Architecture at Twitter</a> by <a href="https://en.wikipedia.org/wiki/Raffi_Krikorian">Raffi Krikorian</a> at that time working for Twitter. Specifically:</p> 
 <ul> 
- <li>Discuss the NoSQL technology used addressing the following questions: <strong>[max. 250 words (excl. images and references), 15 marks]</strong> 
+ <li>Discuss the NoSQL data stores used addressing the following questions: <strong>[max. 250 words (excl. images and references), 15 marks]</strong> 
   <ul> 
-   <li>What technology has been used?</li> 
-   <li>Why has it been chosen?</li> 
+   <li>What NoSQL store has been used?</li> 
    <li>What features are provided by that chosen NoSQL store?</li> 
+   <li>Why has it been chosen?</li> 
   </ul> </li> 
  <li>Discuss how partitioning and replication is implemented in the architecture of Twitter. <strong>[max. 250 words (excl. images and references), 25 marks]</strong> </li> 
 </ul> 
