--- a/partI/.mu3.md.html
+++ b/partI/.mu3.md.html
@@ -652,23 +652,23 @@ function setDocumentScrollTop(ypos)
 <h2> <a id="lectures" class="anchor" href="#lectures" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lectures</h2> 
 <p>Lecture recordings are released on Wednesdays:</p> 
 <ul> 
- <li>L2: NoSQL (consistency) 
+ <li>L3a: NoSQL (consistency) 
   <ul> 
    <li> 
     <g-emoji alias="movie_camera" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3a5.png" ios-version="6.0">
      🎥
-    </g-emoji> <a href=".TBA.md.html">Lecture 3a</a> </li> 
+    </g-emoji> <a href="https://leicester.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=e305bf7e-aec5-4f52-86f9-994e380f2149">Lecture 3a</a> </li> 
    <li> 
     <g-emoji alias="notebook" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4d3.png" ios-version="6.0">
      📓
     </g-emoji> <a href="./L3a_handouts.pdf">handouts</a> </li> 
   </ul> </li> 
- <li>L2b: Preparation for miniproject (Twitter integration) 
+ <li>L3b: Preparation for miniproject (Twitter integration) 
   <ul> 
    <li> 
     <g-emoji alias="movie_camera" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3a5.png" ios-version="6.0">
      🎥
-    </g-emoji> <a href=".TBA.md.html">Lecture 3b</a> </li> 
+    </g-emoji> <a href="https://leicester.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=aadd7904-e313-47f7-8cda-969543656e23">Lecture 3b</a> </li> 
    <li> 
     <g-emoji alias="notebook" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4d3.png" ios-version="6.0">
      📓
