--- a/partI/twitter_exercise/.readme.md.html
+++ b/partI/twitter_exercise/.readme.md.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>/Users/ab373/Documents/ArturData/git/CO7X17-17-18/partI/.mu3.md.html</title>
+<title>/Users/ab373/Documents/ArturData/git/CO7X17-17-18/partI/twitter_exercise/.readme.md.html</title>
 
 
 <style type="text/css">
@@ -639,72 +639,37 @@ function setDocumentScrollTop(ypos)
 
 </head>
 <body class="markdown-body">
-<h1> <a id="module-unit-3-polyglot-persistence-ii" class="anchor" href="#module-unit-3-polyglot-persistence-ii" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Module Unit 3: Polyglot Persistence (II)</h1> 
-<p>This module unit is a follow-up of the previous unit on NoSQL, and we are going to cover:</p> 
+<h1> <a id="lab-session-3-cloud-integration-with-twitter-and-mlab" class="anchor" href="#lab-session-3-cloud-integration-with-twitter-and-mlab" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lab session 3: Cloud integration with Twitter and mLab</h1> 
+<p>In this exercise, we are going to develop a web application that obtains some business intelligence from Twitter data, already extracted via <a href="https://github.com/twitter/twurl">twurl</a>.</p> 
+<p>The <a href="..md.html">codebase</a>, implementing the skeleton of the web app, facilitated to do the exercise is built atop the <a href="https://docs.spring.io/spring/docs/current/spring-framework-reference/web.html#spring-web">Spring MVC</a> framework using Groovy for implementing the logic and the views are implemented using <a href="https://docs.spring.io/spring/docs/current/spring-framework-reference/web.html#mvc-view-jsp">JavaServer Pages</a>.</p> 
+<p>This codebase provided for this exercise is going to be very similar to the one provided for doing the <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/partI/miniproject1.md">miniproject</a>.</p> 
+<h2> <a id="programming-exercises" class="anchor" href="#programming-exercises" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Programming exercises</h2> 
 <ul> 
- <li>consistency in cloud systems;</li> 
- <li>trade-offs to be made to improve availability in cloud systems;</li> 
- <li>consistency in MongoDB.</li> 
-</ul> 
-<p>In the lecture we will discuss a web app built atop the <a href="https://spring.io/">Spring Framework</a> that integrates with the Twitter API and with MongoDB instance on mLab (via GMongo), building on the exercises used in <a href="./.mu2.md.html">module unit 2</a>.</p> 
-<p>In the exercises, we will use the source code of this web app for extracting information from Twitter. This source code is the codebase to be used to solve the programming exercises of <a href="./.miniproject1.md.html">miniproject 1</a>.</p> 
-<p>There is also a quiz for summarizing the theory covered.</p> 
-<h2> <a id="lectures" class="anchor" href="#lectures" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lectures</h2> 
-<p>Lecture recordings are released on Wednesdays:</p> 
-<ul> 
- <li>L3a: NoSQL (consistency) 
+ <li>To run the web app, choose one of the following options (as explained in <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/partI/mu3.md#lectures">lecture recording 3b</a>): 
   <ul> 
-   <li> 
-    <g-emoji alias="movie_camera" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3a5.png" ios-version="6.0">
-     🎥
-    </g-emoji> <a href="https://leicester.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=e305bf7e-aec5-4f52-86f9-994e380f2149">Lecture 3a</a> </li> 
-   <li> 
-    <g-emoji alias="notebook" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4d3.png" ios-version="6.0">
-     📓
-    </g-emoji> <a href="./L3a_handouts.pdf">handouts</a> </li> 
+   <li>From a Bash shell: 
+    <ul> 
+     <li> <code>cd</code> to the folder of the project</li> 
+     <li> <code>./gradlew clean bootRun</code> starts the web server</li> 
+     <li> <code>CTRL-C</code> stops the server</li> 
+    </ul> </li> 
+   <li>From the STS, in perspective <code>Spring</code>&nbsp;and view <code>Boot Dashboard</code>, click on the project <code>twitter_exercises</code> and the run button.</li> 
   </ul> </li> 
- <li>L3b: Preparation for miniproject (Twitter integration) 
-  <ul> 
-   <li> 
-    <g-emoji alias="movie_camera" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f3a5.png" ios-version="6.0">
-     🎥
-    </g-emoji> <a href="https://leicester.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=aadd7904-e313-47f7-8cda-969543656e23">Lecture 3b</a> </li> 
-   <li> 
-    <g-emoji alias="notebook" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4d3.png" ios-version="6.0">
-     📓
-    </g-emoji> <a href="./L3b_handouts.pdf">handouts</a> </li> 
-  </ul> </li> 
+ <li>The JSON files under <code>src/main/resources/twitter</code> provide some sample data that can be retrieved from Twitter using <code>twurl</code>.</li> 
 </ul> 
-<h2> <a id="exercises" class="anchor" href="#exercises" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exercises</h2> 
-<p>For doing formative and assessed coursework, set up your own private <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/tooling.md#setting-up-your-github-repository">as explained in the tooling section</a>. Once you private repository is set up, do the following exercise:</p> 
+<h3> <a id="exercise-1-followers-report" class="anchor" href="#exercise-1-followers-report" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exercise 1: followers report</h3> 
+<p>In the controller <a href="./src/main/groovy/lab2/reports/IndexController.groovy">IndexController</a>, add code to the handler method <code>followers()</code> in order to list all the friends that are also followers.</p> 
+<p>Your code should extract data from the files <code>friends.json</code>&nbsp; and <code>followers.json</code>&nbsp; under <code>src/main/resources/twitter</code> using <code>JsonSlurper</code>.</p> 
+<h3> <a id="exercise-2-friends-report" class="anchor" href="#exercise-2-friends-report" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exercise 2: friends report</h3> 
+<p>In the controller <a href="./src/main/groovy/lab2/reports/IndexController.groovy">IndexController</a>, add code to the handler method <code>friends()</code> in order to mine some intelligence about the provided Twitter data.</p> 
+<p>For each friend, add an object <code>FriendDto</code> into the list <code>friends</code> with the following information:</p> 
 <ul> 
- <li> 
-  <g-emoji alias="computer" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4bb.png" ios-version="6.0">
-   💻
-  </g-emoji> <a href="./twitter_exercise/.readme.md.html">Twitter integration</a> (to be released on Wednesday) 
-  <ul> 
-   <li> 
-    <g-emoji alias="computer" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4bb.png" ios-version="6.0">
-     💻
-    </g-emoji> <a href="./.twitter_exercise_solution.md.html">solution to exercises</a> (this link will be enabled when solutions are released)</li> 
-  </ul> </li> 
+ <li> <code>name</code>: your friend <code>name</code> </li> 
+ <li> <code>description</code>: your friend description</li> 
+ <li> <code>noTweets</code>: their number of tweets (up to 10)</li> 
+ <li> <code>noFavoriteTweets</code>: the overall number of <em>likes</em> (aggregated favorite count for all tweets) for their selected tweets (those counted above)</li> 
+ <li> <code>noPopularTweets</code>: the number of popular tweets (whose whose favorite count is greater than 5) for their selected tweets (those counted above)</li> 
 </ul> 
-<p>Solutions to exercises will be posted under this folder on GitHub as projects with the name <code>${ExerciseName}_solution</code>.</p> 
-<ul> 
- <li> 
-  <g-emoji alias="black_nib" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2712.png" ios-version="6.0">
-   ✒️
-  </g-emoji> Quiz on NoSQL 
-  <ul> 
-   <li><a href="https://blackboard.le.ac.uk/webapps/assessment/take/launchAssessment.jsp?course_id=_5572_1&amp;content_id=_1291085_1&amp;mode=view">CO4217/CO7217 (campus students)</a></li> 
-   <li><a href="https://blackboard.le.ac.uk/webapps/assessment/take/launchAssessment.jsp?course_id=_7623_1&amp;content_id=_1291252_1&amp;mode=cpview">CO7517 (DL students)</a></li> 
-   <li>you may need to be logged in Blackboard in your browser for the redirection to work correctly;</li> 
-   <li>feedback is provided as soon as you submit your answers.</li> 
-  </ul> </li> 
-</ul> 
-<h2> <a id="references" class="anchor" href="#references" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>References</h2> 
-<ul> 
- <li>Pramod J. Sadalage; Martin Fowler. NoSQL Distilled: A Brief Guide to the Emerging World of Polyglot Persistence. Addison-Wesley Professional. Chapters 5, 9. (available on the <a href="http://proquest.safaribooksonline.com.ezproxy3.lib.le.ac.uk/book/databases/9780133036138">Library catalogue</a>)</li> 
-</ul>
+<p>Your code should extract data from the files under <code>src/main/resources/twitter</code> using <code>JsonSlurper</code>.</p>
 </body>
 </html>
