--- a/partI/twitter_exercise/.readme.md.html
+++ b/partI/twitter_exercise/.readme.md.html
@@ -639,7 +639,7 @@ function setDocumentScrollTop(ypos)
 
 </head>
 <body class="markdown-body">
-<h1> <a id="lab-session-3-cloud-integration-with-twitter-and-mlab" class="anchor" href="#lab-session-3-cloud-integration-with-twitter-and-mlab" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lab session 3: Cloud integration with Twitter and mLab</h1> 
+<h1> <a id="lab-session-3-business-intelligence-from-twitter-data" class="anchor" href="#lab-session-3-business-intelligence-from-twitter-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lab session 3: Business Intelligence from Twitter Data</h1> 
 <p>In this exercise, we are going to develop a web application that obtains some business intelligence from Twitter data, already extracted via <a href="https://github.com/twitter/twurl">twurl</a>.</p> 
 <p>The <a href="..md.html">codebase</a>, implementing the skeleton of the web app, facilitated to do the exercise is built atop the <a href="https://docs.spring.io/spring/docs/current/spring-framework-reference/web.html#spring-web">Spring MVC</a> framework using Groovy for implementing the logic and the views are implemented using <a href="https://docs.spring.io/spring/docs/current/spring-framework-reference/web.html#mvc-view-jsp">JavaServer Pages</a>.</p> 
 <p>This codebase provided for this exercise is going to be very similar to the one provided for doing the <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/partI/miniproject1.md">miniproject</a>.</p> 
