--- a/partI/twitter_exercise/.readme.md.html
+++ b/partI/twitter_exercise/.readme.md.html
@@ -642,7 +642,7 @@ function setDocumentScrollTop(ypos)
 <h1> <a id="lab-session-3-business-intelligence-from-twitter-data" class="anchor" href="#lab-session-3-business-intelligence-from-twitter-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lab session 3: Business Intelligence from Twitter Data</h1> 
 <p>In this exercise, we are going to develop a web application that obtains some business intelligence from Twitter data, already extracted via <a href="https://github.com/twitter/twurl">twurl</a>.</p> 
 <p>The <a href="..md.html">codebase</a>, implementing the skeleton of the web app, facilitated to do the exercise is built atop the <a href="https://docs.spring.io/spring/docs/current/spring-framework-reference/web.html#spring-web">Spring MVC</a> framework using Groovy for implementing the logic and the views are implemented using <a href="https://docs.spring.io/spring/docs/current/spring-framework-reference/web.html#mvc-view-jsp">JavaServer Pages</a>.</p> 
-<p>This codebase provided for this exercise is going to be very similar to the one provided for doing the <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/partI/miniproject1.md">miniproject</a>.</p> 
+<p>The codebase provided for this exercise is going to be very similar to the one provided for doing the <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/partI/miniproject1.md">miniproject</a>.</p> 
 <h2> <a id="programming-exercises" class="anchor" href="#programming-exercises" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Programming exercises</h2> 
 <ul> 
  <li>To run the web app, choose one of the following options (as explained in <a href="https://github.com/uol-inf/CO7X17-17-18/blob/master/partI/mu3.md#lectures">lecture recording 3b</a>): 
@@ -657,11 +657,12 @@ function setDocumentScrollTop(ypos)
   </ul> </li> 
  <li>The JSON files under <code>src/main/resources/twitter</code> provide some sample data that can be retrieved from Twitter using <code>twurl</code>.</li> 
 </ul> 
+<p>Access the web app at <a href="http://localhost:8080">http://localhost:8080</a>.</p> 
 <h3> <a id="exercise-1-followers-report" class="anchor" href="#exercise-1-followers-report" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exercise 1: followers report</h3> 
-<p>In the controller <a href="./src/main/groovy/lab2/reports/IndexController.groovy">IndexController</a>, add code to the handler method <code>followers()</code> in order to list all the friends that are also followers.</p> 
+<p>In the controller <a href="./src/main/groovy/lab3/reports/IndexController.groovy">IndexController</a>, add code to the handler method <code>followers()</code> in order to list all the friends that are also followers.</p> 
 <p>Your code should extract data from the files <code>friends.json</code>&nbsp; and <code>followers.json</code>&nbsp; under <code>src/main/resources/twitter</code> using <code>JsonSlurper</code>.</p> 
 <h3> <a id="exercise-2-friends-report" class="anchor" href="#exercise-2-friends-report" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exercise 2: friends report</h3> 
-<p>In the controller <a href="./src/main/groovy/lab2/reports/IndexController.groovy">IndexController</a>, add code to the handler method <code>friends()</code> in order to mine some intelligence about the provided Twitter data.</p> 
+<p>In the controller <a href="./src/main/groovy/lab3/reports/IndexController.groovy">IndexController</a>, add code to the handler method <code>friends()</code> in order to mine some intelligence about the provided Twitter data.</p> 
 <p>For each friend, add an object <code>FriendDto</code> into the list <code>friends</code> with the following information:</p> 
 <ul> 
  <li> <code>name</code>: your friend <code>name</code> </li> 
