--- a/partII/.mu4.md.html
+++ b/partII/.mu4.md.html
@@ -650,8 +650,8 @@ function setDocumentScrollTop(ypos)
 <p>The lectures are supplemented with a presentation by Martin Fowler on domain specific languages.</p> 
 <p>The exercises for this week consist of:</p> 
 <ul> 
- <li>a quiz test that you can use to check your understanding on the module unit together;</li> 
- <li>a modelling exercise in which you will have to define the abstract of a domain-specific modelling language, namely a feature modelling language;</li> 
+ <li>a quiz test that you can use to check your understanding on the module unit;</li> 
+ <li>a modelling exercise in which you will have to define the abstract syntax of a domain-specific modelling language, namely a feature modelling language;</li> 
  <li>a programming exercise on metamodelling with the Eclipse Modeling Framework (EMF).</li> 
 </ul> 
 <h2> <a id="lectures" class="anchor" href="#lectures" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lectures</h2> 
