Add link to problem worksheet

--- a/partII/.mu4.md.html
+++ b/partII/.mu4.md.html
@@ -711,6 +711,10 @@ function setDocumentScrollTop(ypos)
   </g-emoji> <a href="https://leicester.cloud.panopto.eu/Panopto/Pages/Viewer.aspx?id=f9a75435-071b-4b4a-a236-887b58867775">Problem: Metamodelling with MOF</a> 
   <ul> 
    <li> 
+    <g-emoji alias="notebook" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4d3.png" ios-version="6.0">
+     📓
+    </g-emoji> <a href="./sur1_fm.pdf">handouts</a> </li> 
+   <li> 
     <g-emoji alias="black_nib" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2712.png" ios-version="6.0">
      ✒️
     </g-emoji> <a href="./surgery1_solution.pdf">solution to exercises</a> (this link will be enabled when solutions are released)</li> 
