--- a/partII/.mu4.md.html
+++ b/partII/.mu4.md.html
@@ -713,7 +713,7 @@ function setDocumentScrollTop(ypos)
    <li> 
     <g-emoji alias="notebook" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f4d3.png" ios-version="6.0">
      📓
-    </g-emoji> <a href="./sur1_fm.pdf">handouts</a> </li> 
+    </g-emoji> <a href="./sur1_fm.pdf">worksheet</a> </li> 
    <li> 
     <g-emoji alias="black_nib" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2712.png" ios-version="6.0">
      ✒️
